# formula2latex-recognizer

./: .gitignore  README.md  test_ml_system.py
backend/: .env.example  README_TELEGRAM_BOT.md  alembic.ini  demo_scenario.py  docker-compose.yml  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 8c8aef257a72_initial_database_schema.py
backend/app/: main.py
backend/docs/: API_DOCUMENTATION.md  README_DB.md  TELEGRAM_BOT_DOCUMENTATION.md
backend/scripts/: check_db_connection.py
backend/src/: Dockerfile
backend/src/api/: auth.py  dependencies.py  main.py  models.py  schemas.py  tasks.py  users.py  wallet.py
backend/src/domain/: __init__.py  file.py  model.py  task.py  user.py  wallet.py
backend/src/domain/interfaces/: messaging.py  ml_model.py  repositories.py  services.py
backend/src/domain/services/: task_service.py  user_service.py  wallet_service.py
backend/src/infra/: nginx.conf
backend/src/infrastructure/: __init__.py  container.py  database.py  init_db.py  messaging.py  models.py  repositories.py
backend/src/infrastructure/services/: image_validator.py  password_service.py
backend/src/schemas/: __init__.py  file.py  model.py  task.py  transaction.py  user.py  wallet.py
backend/src/services/: result_processor.py  task_service.py
backend/src/telegram_bot/: api_client.py  config.py  handlers.py  main.py  user_storage.py
backend/tests/: bot_demo.py  conftest.py  test_api.py  test_repositories.py  test_system.py
frontend/: Dockerfile  nginx.conf  package.json  tailwind.config.js
ml/: Dockerfile  README.md  (+6 more)
(+41 files in other folders)
