[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formula2latex-backend"
version = "0.1.0"
description = "Backend for formula2latex recognizer"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.23.2",
    "pydantic==2.4.2",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.7",
    "alembic==1.12.1",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-postgresql==5.0.0",
    "python-dotenv==1.0.0",
    "passlib[bcrypt]==1.7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"